--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -320,12 +320,12 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 CapsuleComponent=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
@@ -767,17 +767,9 @@ BackgroundBlur="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" 
 ContentWidget="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Dialogue/BP_NPC_TALK1.BP_NPC_TALK1
-OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2.BlendSpace_AI_v2
-OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/AI_Controller_v2.AI_Controller_v2
-OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/AB_AI_v2.AB_AI_v2
-OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BP_AI_v2.BP_AI_v2
-OpenAssetsAtExit=/Game/ThirdPerson/AI/v2/BT_AI_v2.BT_AI_v2
-OpenAssetsAtExit=/Game/ThirdPerson/AI/BBD_Enemy_AI.BBD_Enemy_AI
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Dialogue/BPI_DIALOGUE_TEST.BPI_DIALOGUE_TEST
-OpenAssetsAtExit=/Game/Dialogue/WB_Dialogue_Test.WB_Dialogue_Test
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2366,6 +2358,19 @@ Widget.Clipping=True
 Widget.Navigation=True
 Widget.Localization=True
 BP_NPC_TALK1_C.Default=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Physics=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Networking=True
+ExponentialHeightFog.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2518,26 +2523,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRoughSmooth.skullRoug
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRough.skullRough;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Dialogue/WB_Dialogue_Test
-MRUItem1=/Game/Dialogue/BPI_DIALOGUE_TEST
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/AI/v2/BT_AI_v2
-MRUItem4=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem5=/Game/ThirdPerson/AI/v2/AB_AI_v2
-MRUItem6=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem7=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
-MRUItem8=/Game/Dialogue/BP_NPC_TALK1
-MRUItem9=/Game/WB_Test
-MRUItem10=/Game/WB_TextTest
-MRUItem11=/Game/ThirdPerson/AI/v2/BTTask_Attack
-MRUItem12=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
-MRUItem13=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem14=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem15=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
-MRUItem16=/Game/ThirdPerson/AI/v2/BBD_AI_v2
-MRUItem17=/Game/ThirdPerson/AI/v2/NewBlendSpace
-MRUItem18=/Game/ThirdPerson/AI/v2/BT_AI
-MRUItem19=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Resources/BP_FootstepAnimNotify
+MRUItem2=/Game/Dialogue/WB_Dialogue_Test
+MRUItem3=/Game/Dialogue/BPI_DIALOGUE_TEST
+MRUItem4=/Game/ThirdPerson/AI/v2/BT_AI_v2
+MRUItem5=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem6=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem7=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem8=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
+MRUItem9=/Game/Dialogue/BP_NPC_TALK1
+MRUItem10=/Game/WB_Test
+MRUItem11=/Game/WB_TextTest
+MRUItem12=/Game/ThirdPerson/AI/v2/BTTask_Attack
+MRUItem13=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
+MRUItem14=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem15=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem16=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
+MRUItem17=/Game/ThirdPerson/AI/v2/BBD_AI_v2
+MRUItem18=/Game/ThirdPerson/AI/v2/NewBlendSpace
+MRUItem19=/Game/ThirdPerson/AI/v2/BT_AI
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
