Imported and Converted Roll Animations

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -402,7 +402,7 @@ WB_Dialogue_Test_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Cons
 PlayerStart=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Dialogue
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -481,7 +481,7 @@ Object="\"Object\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.Parent.ParentKeys.ParentKeys[1]\" \"Object.Blackboard\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -2446,7 +2446,7 @@ bConvertSceneUnit=False
 bImportMeshesInBoneHierarchy=True
 AnimationLength=FBXALIT_ExportedTime
 FrameImportRange=(Min=0,Max=0)
-bUseDefaultSampleRate=True
+bUseDefaultSampleRate=False
 CustomSampleRate=0
 bSnapToClosestFrameBoundary=False
 bImportCustomAttribute=True
@@ -2457,7 +2457,7 @@ bSetMaterialDriveParameterOnCustomAttribute=False
 MaterialCurveSuffixes=_mat
 bRemoveRedundantKeys=True
 bDeleteExistingMorphTargetCurves=False
-bDoNotImportCurveWithZero=False
+bDoNotImportCurveWithZero=True
 bPreserveLocalTransform=False
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
@@ -2485,7 +2485,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Animation=True
@@ -2523,26 +2523,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRoughSmooth.skullRoug
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRough.skullRough;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/Resources/BP_FootstepAnimNotify
-MRUItem2=/Game/Dialogue/WB_Dialogue_Test
-MRUItem3=/Game/Dialogue/BPI_DIALOGUE_TEST
-MRUItem4=/Game/ThirdPerson/AI/v2/BT_AI_v2
-MRUItem5=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem6=/Game/ThirdPerson/AI/v2/AB_AI_v2
-MRUItem7=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem8=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
-MRUItem9=/Game/Dialogue/BP_NPC_TALK1
-MRUItem10=/Game/WB_Test
-MRUItem11=/Game/WB_TextTest
-MRUItem12=/Game/ThirdPerson/AI/v2/BTTask_Attack
-MRUItem13=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
-MRUItem14=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem16=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
-MRUItem17=/Game/ThirdPerson/AI/v2/BBD_AI_v2
-MRUItem18=/Game/ThirdPerson/AI/v2/NewBlendSpace
-MRUItem19=/Game/ThirdPerson/AI/v2/BT_AI
+MRUItem0=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/Resources/BP_FootstepAnimNotify
+MRUItem3=/Game/Dialogue/WB_Dialogue_Test
+MRUItem4=/Game/Dialogue/BPI_DIALOGUE_TEST
+MRUItem5=/Game/ThirdPerson/AI/v2/BT_AI_v2
+MRUItem6=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem7=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem8=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem9=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
+MRUItem10=/Game/Dialogue/BP_NPC_TALK1
+MRUItem11=/Game/WB_Test
+MRUItem12=/Game/WB_TextTest
+MRUItem13=/Game/ThirdPerson/AI/v2/BTTask_Attack
+MRUItem14=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
+MRUItem15=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem16=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem17=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
+MRUItem18=/Game/ThirdPerson/AI/v2/BBD_AI_v2
+MRUItem19=/Game/ThirdPerson/AI/v2/NewBlendSpace
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -2595,6 +2595,7 @@ MRUItem19=/Game/ThirdPerson/AI/v2/BT_AI
 /Game/Dialogue/BP_NPC_TALK1.BP_NPC_TALK1=0
 /Game/Dialogue/BPI_DIALOGUE_TEST.BPI_DIALOGUE_TEST=0
 /Game/Dialogue/WB_Dialogue_Test.WB_Dialogue_Test=0
+/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll.Dodge_Small_Forward_Roll=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
