Forward dodge roll added
Includes forward momentum which can be combined with jump, to gain further distance

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -400,6 +400,7 @@ EdGraphNode_Comment=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Con
 PropertyWrapper=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 WB_Dialogue_Test_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 PlayerStart=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
+ABP_Manny_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
@@ -595,7 +596,7 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 ABP_Manny_C="\"Object\" "
@@ -656,9 +657,9 @@ MediaSource="\"Object\" "
 MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Character="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
-Pawn="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BP_ThirdPersonCharacter_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 BP_ThirdPersonCharacter_Enemy_C="\"Object\" \"Object.Actor.Tags\" "
 BP_EnemyAI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 PawnSensingComponent="\"Object\" "
@@ -768,8 +769,8 @@ ContentWidget="\"Object\" \"Object.Appearance.LowQualityFallbackBrush.Margin\" \
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2523,26 +2524,26 @@ RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRoughSmooth.skullRoug
 RecentlyPlaced=/Game/Blender_Collections/Dragonslayer/skullRough.skullRough;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/Resources/BP_FootstepAnimNotify
-MRUItem3=/Game/Dialogue/WB_Dialogue_Test
-MRUItem4=/Game/Dialogue/BPI_DIALOGUE_TEST
-MRUItem5=/Game/ThirdPerson/AI/v2/BT_AI_v2
-MRUItem6=/Game/ThirdPerson/AI/v2/BP_AI_v2
-MRUItem7=/Game/ThirdPerson/AI/v2/AB_AI_v2
-MRUItem8=/Game/ThirdPerson/AI/v2/AI_Controller_v2
-MRUItem9=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
-MRUItem10=/Game/Dialogue/BP_NPC_TALK1
-MRUItem11=/Game/WB_Test
-MRUItem12=/Game/WB_TextTest
-MRUItem13=/Game/ThirdPerson/AI/v2/BTTask_Attack
-MRUItem14=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
-MRUItem15=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem16=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem17=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
-MRUItem18=/Game/ThirdPerson/AI/v2/BBD_AI_v2
-MRUItem19=/Game/ThirdPerson/AI/v2/NewBlendSpace
+MRUItem0=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem1=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
+MRUItem2=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/Resources/BP_FootstepAnimNotify
+MRUItem5=/Game/Dialogue/WB_Dialogue_Test
+MRUItem6=/Game/Dialogue/BPI_DIALOGUE_TEST
+MRUItem7=/Game/ThirdPerson/AI/v2/BT_AI_v2
+MRUItem8=/Game/ThirdPerson/AI/v2/BP_AI_v2
+MRUItem9=/Game/ThirdPerson/AI/v2/AB_AI_v2
+MRUItem10=/Game/ThirdPerson/AI/v2/AI_Controller_v2
+MRUItem11=/Game/ThirdPerson/AI/v2/BlendSpace_AI_v2
+MRUItem12=/Game/Dialogue/BP_NPC_TALK1
+MRUItem13=/Game/WB_Test
+MRUItem14=/Game/WB_TextTest
+MRUItem15=/Game/ThirdPerson/AI/v2/BTTask_Attack
+MRUItem16=/Game/ThirdPerson/AI/Tasks/BTTask_ChasePlayer
+MRUItem17=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem18=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem19=/Game/ThirdPerson/AI/v2/BTTask_ChasePlayer
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
